--- a/layouts/partials/experiences.html
+++ b/layouts/partials/experiences.html
@@ -11,7 +11,7 @@
                         <div class="company">{{ .company }}</div>
                     </div><!--//meta-->
                     <div class="details">
-                        <p>{{ with .details }}{{ . | markdownify }}{{ end }}</p>
+                        <p>{{ range .details }}{{ . | markdownify }}{{ end }}</p>
                     </div><!--//details-->
                 </div><!--//item-->
 				{{ end }}
